# my-atrust

./: .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  SDD_WORKFLOW.md  SPEC.md  config.example.json  config.schema.json  deny.toml  openapi.yaml  package-lock.json  package.json  policy.proto  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  contract-drift.yml  ebpf-test.yml  pr-check.yml
client-desktop/src-tauri/: Cargo.toml
client-desktop/src-tauri/src/: main.rs
eBPF/interceptor/: Cargo.toml
eBPF/interceptor/src/: lib.rs
trust-client/: Cargo.toml
trust-client/src/: auth.rs  config.rs  device.rs  lib.rs  tunnel.rs
trust-core/: Cargo.toml
trust-core/src/: error.rs  lib.rs  policy.rs  spa.rs  types.rs
trust-core/src/auth/: jwt.rs  mod.rs
trust-core/src/crypto/: gm.rs  mod.rs
trust-core/src/telemetry/: metrics.rs  mod.rs
trust-ctl/: Cargo.toml  build.rs
trust-ctl/src/: config.rs  db.rs  grpc.rs  lib.rs  main.rs  service.rs
trust-ctl/src/api/: mod.rs
trust-ctl/src/api/v1/: handlers.rs  mod.rs  types.rs
trust-ctl/tests/: api_contract_tests.rs
trust-gw/: Cargo.toml
trust-gw/src/: config.rs  interceptor.rs  main.rs  proxy.rs  spa.rs
