[package]
name = "trust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "trust_core"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# JWT / Auth
jsonwebtoken.workspace = true
totp-rs.workspace = true

# Crypto
rustls.workspace = true
x509-parser.workspace = true
pem.workspace = true
pkcs8.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true

# 国密
sm2.workspace = true
sm3.workspace = true
sm4.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true
secrecy.workspace = true
zeroize.workspace = true

# Observability
tracing.workspace = true
metrics.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
base64.workspace = true
bytes.workspace = true
hex.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
