[package]
name = "trust-gw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "trust-gw"
path = "src/main.rs"

[dependencies]
trust-core.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# HTTP client
reqwest.workspace = true

# Crypto
rustls.workspace = true

# Redis
redis.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# gRPC / Protobuf
prost.workspace = true
tonic.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
