[package]
name = "trust-gw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "trust-gw"
path = "src/main.rs"

[dependencies]
trust-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Crypto
rustls = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }
pkcs8 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

# Redis
redis = { workspace = true }

# UDP
socket2 = "0.5"

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# gRPC / Protobuf
prost.workspace = true
tonic.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
bytes.workspace = true
